Bug 86083 - TouchAdjustment doesn't correct for scroll-offsets
Summary: TouchAdjustment doesn't correct for scroll-offsets
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Allan Sandfeld Jensen
URL:
Keywords:
Depends on:
Blocks: 85101
  Show dependency treegraph
 
Reported: 2012-05-10 04:05 PDT by Allan Sandfeld Jensen
Modified: 2012-05-10 09:17 PDT (History)
2 users (show)

See Also:


Attachments
Patch (4.45 KB, patch)
2012-05-10 04:08 PDT, Allan Sandfeld Jensen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Allan Sandfeld Jensen 2012-05-10 04:05:47 PDT
The two functions EventHandler::bestClickableNodeForTouchPoint and  EventHandler::bestZoomableAreaForTouchPoint does not correctly adjust for scroll-offset. Scroll-offset is only taking into account for calculating distance, but not in hit-testing or in returned adjusted values.

This is in case corrected in Internals to make the test-cases work, but it should be done generally.
Comment 1 Allan Sandfeld Jensen 2012-05-10 04:08:49 PDT
Created attachment 141139 [details]
Patch
Comment 2 Terry Anderson 2012-05-10 08:02:35 PDT
I just uploaded a revised patch for https://bugs.webkit.org/show_bug.cgi?id=85101, which takes the scroll offset/frame issues into account for chromium. But in light of this bug, I will have to re-revise.
Comment 3 WebKit Review Bot 2012-05-10 09:17:11 PDT
Comment on attachment 141139 [details]
Patch

Clearing flags on attachment: 141139

Committed r116650: <http://trac.webkit.org/changeset/116650>
Comment 4 WebKit Review Bot 2012-05-10 09:17:16 PDT
All reviewed patches have been landed.  Closing bug.