TouchAdjustment doesn't correct for scroll-offsets. https://bugs.webkit.org/show_bug.cgi?id=86083

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-05-10
Reviewed by Kenneth Rohde Christiansen.

Already tested by: touchadjustment/scroll-delegation

* page/EventHandler.cpp:
(WebCore::EventHandler::bestClickableNodeForTouchPoint):
(WebCore::EventHandler::bestZoomableAreaForTouchPoint):
* page/TouchAdjustment.cpp:
(WebCore::TouchAdjustment::findNodeWithLowestDistanceMetric):
* testing/Internals.cpp:
(WebCore::Internals::bestZoomableAreaForTouchPoint):

Canonical link: https://commits.webkit.org/103692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116650 268f45cc-cd09-0410-ab3c-d52691b4dbfc